# django-react-spa-boilerplate

./: .gitignore  README.md  pyproject.toml  scripts.py  setup.cfg
configs/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: package-lock.json  package.json  webpack.common.js  webpack.dev.js
frontend/src/: index.js
frontend/src/components/: App.js
templates/frontend/: index.html
