[tool.poetry]
name = "configs"
version = "1.0.0"
description = "Django React Boilerplate"
authors = ["João Santos <joaopns05@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "<4.0.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.2"
pre-commit = "^2.4.0"

[tool.poetry.scripts]
start = "scripts:start"
migrate = "scripts:migrate"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
